crates/autoresolve/tests/compile_fail/resolvable_no_return.rs
use autoresolve_macros::resolvable;

struct Foo;

#[resolvable]
impl Foo {
    fn new() {}
}

fn main() {}
